server/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: 
      address: 0.0.0.0
      port_value: 9001

static_resources:
  listeners:
  - name: http_egress # For traffic from the client to the server. Arbitrary, unique name.
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
        # Name must match the qualified name as given here: 
        # https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/network/http_connection_manager/v3/http_connection_manager.proto#envoy-v3-api-msg-extensions-filters-network-http-connection-manager-v3-httpconnectionmanager
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: server_egress_http
          codec_type: AUTO
          route_config:
            name: route-to-client
            virtual_hosts:
            # # To test HTTP-based routing. Define a 'loopback' virtual host.
            # # If the server sends a request to this Envoy instance with the 'Host' header 
            # # set to 'loopback' this route will be chosen and the request is redirected
            # # back to the server itself.
            # - name: loopback
            #   domains: 
            #     - "loopback"
            #   routes:
            #   - match: 
            #       prefix: "/"
            #     route:
            #       host_rewrite_literal: server
            #       cluster: local

            # To test HTTP-based routing. Define an 'echo-client' virtual host.
            # If the server sends a request to this Envoy instance with the 'Host' header 
            # set to 'envoy-client' this route will be chosen and the request is forwarded 
            # to the 'echo-client-cluster' defined below.
            - name: echo-client
              domains: 
                - "*"
              routes:
              - match: 
                  prefix: "/"
                route:
                  host_rewrite_literal: echo-client
                  cluster: echo-client-cluster
          http_filters:
          - name: envoy.filters.http.router
    
  - name: http_ingress # For traffic from the server to the client. Arbitrary, unique name.
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 81
    filter_chains:
    - filters:
        # Name must match the qualified name as given here: 
        # https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/network/http_connection_manager/v3/http_connection_manager.proto#envoy-v3-api-msg-extensions-filters-network-http-connection-manager-v3-httpconnectionmanager
      - name: envoy.filters.network.http_connection_manager 
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: server_ingress_http
          codec_type: AUTO
          route_config:
            name: route-to-server
            virtual_hosts:
            - name: echo-server
              domains: 
                - "*"
              routes:
              - match: 
                  prefix: "/"
                route:
                  host_rewrite_literal: echo-server
                  cluster: local
          http_filters:
          - name: envoy.filters.http.router

  clusters:
  - name: echo-client-cluster
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: echo-client-cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: client-envoy # address of client envoy
                port_value: 81        # ingress port of client envoy
    # transport_socket:
    #   name: envoy.transport_sockets.tls
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    #     sni: localhost

  - name: local
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: local
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: server  # address of server application.
                port_value: 8002 # port of server application
    # transport_socket:
    #   name: envoy.transport_sockets.tls
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    #     sni: localhost
